--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
     "@types/react-dom": "^18.3.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3"
+  },
+
+  "overrides": {
+    "typescript": "^5.5.3"
   }
 }
