--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-
-  "scripts":
-  {
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && tsc",
     "test": "react-scripts test",
@@ -21,15 +19,13 @@
     "tsc": "tsc"
   },
   "publicUrl": "/",
-
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
-  "browserslist":
-  {
+  "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
@@ -41,11 +37,11 @@
       "last 1 safari version"
     ]
   },
-
-  "devDependencies":
-  {
+  "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3"
   }
