--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-
-  "scripts":
-  {
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && tsc && vercel build --ignore-errors",
     "test": "react-scripts test",
@@ -22,15 +20,13 @@
     "vercel": "vercel build"
   },
   "publicUrl": "/",
-
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
-  "browserslist":
-  {
+  "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
@@ -42,13 +38,11 @@
       "last 1 safari version"
     ]
   },
-
-  "devDependencies":
-  {
+  "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3"
+    "typescript": "^4.5.5"
   },
   "homepage": "https://task2.com/smashzone-hng"
 }
