--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && tsc && vercel build --ignore-errors",
@@ -42,6 +43,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "tailwindcss": "^3.4.4",
+    "typescript": "^4.5.5"
+  },
+  
+  "overrides": {
     "typescript": "^4.5.5"
   },
   "homepage": "https://task2.com/smashzone-hng"
